Rewrite: start on explosions